# indie-studio

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  install_manifest.txt
Bomberman/assets/map/: map
assets/fire/: explosion00-frame010.tga  explosion00-frame012.tga  explosion00-frame015.tga  explosion00-frame017.tga  explosion00-frame018.tga  explosion00-frame019.tga  explosion00-frame020.tga  explosion00-frame023.tga  explosion00-frame025.tga  explosion00-frame026.tga  explosion00-frame028.tga  explosion00-frame030.tga  explosion00-frame031.tga  explosion00-frame033.tga  explosion00-frame035.tga  explosion00-frame036.tga  explosion00-frame037.tga  explosion00-frame040.tga  explosion00-frame042.tga  explosion00-frame043.tga  explosion00-frame045.tga  explosion00-frame046.tga  explosion00-frame047.tga  explosion00-frame051.tga  explosion00-frame055.tga  explosion00-frame061.tga  explosion00-frame062.tga  explosion00-frame063.tga  explosion00-frame064.tga  explosion00-frame065.tga  explosion00-frame068.tga  explosion00-frame070.tga  explosion00-frame076.tga  explosion00-frame078.tga  explosion00-frame081.tga  explosion00-frame082.tga  explosion00-frame083.tga  explosion00-frame086.tga  explosion00-frame087.tga  explosion00-frame088.tga  (+11 more)
assets/img/: Dossier Social Etudiant
assets/map/: map
freeglut-3.0.0/: ChangeLog  cmake_install.cmake  freeglut.pc  install_manifest.txt
freeglut-3.0.0/lib/: libglut.so.3.10.0
includes/: Bomb.hpp  Engine.hpp  Entity.hpp  Game.hpp  Lib.hpp  Map.hpp  Music.hpp  MyEventReceiver.hpp  Player.hpp  Time.hpp  Window.hpp
includes/irr/: IrrCompileConfig.h  heapsort.h
installer/: installer.iss
irrlicht-1.8.4/examples/: BuildAllExamples_v8.sln  BuildAllExamples_v9.sln  BuildAllExamples_vc10.sln  BuildAllExamples_vc11.sln  BuildAllExamples_vc12.sln  whereAreTheBinaries.txt
irrlicht-1.8.4/include/: CDynamicMeshBuffer.h  CIndexBuffer.h  CMeshBuffer.h  CVertexBuffer.h  EAttributes.h  ECullingTypes.h  EDebugSceneTypes.h  EDeviceTypes.h  EDriverFeatures.h  EDriverTypes.h  EGUIAlignment.h  EGUIElementTypes.h  EHardwareBufferFlags.h  EMaterialFlags.h  EMaterialTypes.h  EMeshWriterEnums.h  EMessageBoxFlags.h  EPrimitiveTypes.h  ESceneNodeAnimatorTypes.h  ESceneNodeTypes.h  EShaderTypes.h  ETerrainElements.h  IAnimatedMesh.h  IAnimatedMeshMD2.h  IAnimatedMeshMD3.h  IAnimatedMeshSceneNode.h  IAttributeExchangingObject.h  IAttributes.h  IBillboardSceneNode.h  IBillboardTextSceneNode.h  IBoneSceneNode.h  ICameraSceneNode.h  IColladaMeshWriter.h  ICursorControl.h  IDummyTransformationSceneNode.h  IDynamicMeshBuffer.h  IEventReceiver.h  IFileArchive.h  IFileList.h  IFileSystem.h  (+140 more)
irrlicht-1.8.4/media/: config.xml  d3d8.psh  d3d8.vsh  d3d9.hlsl  d3d9.psh  d3d9.vsh  dwarf-Read-Me.txt  earth.x  map-20kdm2.txt  ninja animation ranges.txt  opengl.frag  opengl.psh  opengl.vert  opengl.vsh  settings.xml  yodan mdl - readme.txt
srcs/: Bomb.cpp  Collisions.cpp  Engine.cpp  Entity.cpp  Game.cpp  Lib.cpp  Map.cpp  Music.cpp  MyEventReceiver.cpp  Player.cpp  Time.cpp  Window.cpp  main.cpp
win_installer/: CMakeLists.txt
win_installer/includes/: Installer.hpp  Windows.hpp
win_installer/srcs/: Installer.cpp  Windows.cpp  main.cpp
(+297 files in other folders)
